Add DateUtils class for parsing date strings